--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,18 @@
 <resources>
-    <string name="app_name">SimpleGeolocator</string>
+    <string name="app_name">Running_Wild</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_activity_main">Running_Wild</string>
+    <string name="textview">Main Activity</string>
+    <string name="one">One</string>
+    <string name="two">Map</string>
+    <string name="three">Three</string>
+    <string name="four">Four</string>
+    <string name="my_header_title">Run Tracker</string>
+    <string name="textView2">First Page Text</string>
+    <string name="title_activity_secondary">Secondary Activity</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_third">ThirdActivity</string>
+    <string name="title_activity_fourth">FourthActivity</string>
+    <string name="textView3">Third Page</string>
+    <string name="textView4">Fourth Page</string>
 </resources>
